# aoc23-c-

./: .gitignore  CMakeLists.txt
src/: main.cpp  util.cpp  util.h
src/day1/: day1.cpp  day1.h
src/day2/: day2.cpp  day2.h
src/day3/: day3.cpp  day3.h
test/day1/: test.cpp
test/day2/: test.cpp
test/day3/: test.cpp
